Compiler/tests/bad/function4.nx
function somar(x : int, y : int) : 5
{
    return 3;
}

